feat(listener): Add functionality to confirm closing a ticket with Yes and No buttons
- Added confirmation message with Yes and No buttons for closing a ticket
- If user clicks Yes, the ticket is closed and the channel is deleted
- If user clicks No, the confirmation message is deleted

feat(ticket): Adjust color based on ticket type in TicketHandler

- Adjusted color based on ticket type (bug report, feature request, custom)
- Converted hue from degrees to fraction for Color.getHSBColor() method
- Added emoji "❌" to "Close Ticket" button in sendMessageEmbeds() method